# aok-qa-bot

./: .env.example  .gitignore  Dockerfile  README.md  ai_installation.md  analyze_eval.py  ask.py  build_index.py  cli.py  debug_failures.py  eval_results.json  eval_set.py  evaluate.py  id_mapping.json  pyproject.toml  requirements.txt  run_eval.py  server.py  test_cleaning.py  test_evaluation.py
backend/: main.py
docs/: quality_assessment.md
docs/superpowers/plans/: 2026-05-01-wissensportal-qa-bot.md
docs/superpowers/specs/: 2026-05-01-wissensportal-qa-bot-design.md
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  test-setup.ts
input/: Wissensportal_Hierarchisch_KOMPLETT_bereinigt.json
qa_bot/: __init__.py  config.py  indexer.py  models.py  retriever.py  text_utils.py  topic_filter.py
tests/: test_backend.py  test_config.py  test_dotenv.py  test_indexer.py  test_retriever.py  test_text_utils.py  test_topic_filter.py
