[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aok-qa-bot"
version = "1.2.0"
description = "FAQ bot with embedding search and LLM reranking for AOK Sachsen-Anhalt"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["qa_bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
